scss/underscores/navigation/_links.scss
a {
	//color: $color__link;

	&:visited {
		//color: $color__link-visited;
	}
	&:hover,
	&:focus,
	&:active {
		color: $color__link-hover;
	}
	&:focus {
		outline: none;
	}
	&:hover,
	&:active {
		outline: none;
	}
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, .navigation a, .main-navigation a {
    border-bottom: none;
}
.main-navigation a{
	text-align: left !important;
}
.loose_script_entry_content_h6 h6{
	margin-top: 6%;
}
.edit-link {
    margin-left: 2em;
    font-weight: 700;
}

a > img:hover {
   //opacity: 0.7;
   //transition: .5s;
}

.featured-image a:hover {
    //border: none;
}

